# CT23D

./: .gitignore  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_v0.2.0.md  COMMIT_MESSAGE_v0.3.0.md  COMMIT_MESSAGE_v0.4.0.md  COMMIT_MESSAGE_v0.5.0.md  README.md  RELEASE_v0.5.0.md  pyproject.toml
scripts/: CT_to_3D_legacy.py  run_ct23d_gui.py  view_nrrd.py
src/ct23d/: __init__.py
src/ct23d/cli/: mesh_cli.py  preprocess_cli.py
src/ct23d/config/: defaults.yaml
src/ct23d/config/presets/: example_bone.yaml  example_soft_tissue.yaml
src/ct23d/core/: __init__.py  bins.py  config_io.py  ct_compat.py  export.py  images.py  meshing.py  meshing_optimized.py  models.py  preprocessing.py  volume.py
src/ct23d/gui/: app.py  main_window.py  status.py  view_nrrd_dialog.py  workers.py
src/ct23d/gui/mesher/: __init__.py  bins_editor.py  export_panel.py  histogram_3d_gl_view.py  histogram_3d_view.py  histogram_tabbed_view.py  histogram_view.py  slice_preview.py  wizard.py
src/ct23d/gui/preproc/: __init__.py  wizard.py
src/ct23d/gui/processing3d/: __init__.py  wizard.py
